# ASCII-Painting-Backend

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
.sqlx/: query-1fdceb928daac7bf5ca88e8030c74454fd7aebd7876c5d8b0a363cfbf25e0383.json  query-3e78c97e94d27a1de76a87187222f8f69acdd8aced038ed77f08bcc362e94a0a.json  query-718d6c1d8bd66c51703d455c19dbea984d5d6c248d3165cb326d27ea29fdc3d5.json  query-8206d3af7292bd20ac2000b09aedf55ce56f4fd1cff51288e72f35dfc947acb2.json  query-c1b39466333b54e865b31c7a2bdbf4d7a7df8d730ada7fa0c0a83978edd190fd.json  query-d06b5ecf861e9882032262299de964b820ade96af3e6225a7c0cd4ddaa30be71.json  query-d734b577e56f273ce313d48f19c185daa84bbc7ae8546ca044964faf7420dc45.json
docs/: schedule.md
migrations/: 20240927125156_new_mig.sql
sql/: create_database.sql
src/: app.rs  app_config.rs  dao.rs  error.rs  main.rs  models.rs
src/routes/: messages.rs  mod.rs  painting.rs  paintings.rs  user.rs
src/utils/: authentication.rs  files.rs  mod.rs  test.rs  validation.rs
