[package]
name = "ascii_painting_backend"
version = "0.1.0"
edition = "2021"
authors = ["Nayami <nayamior@outlook.com>"]

[[bin]]
name = "ascii_painting_backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.7.5"
serde = { version = "1.0.210", features = ["derive"] }
axum-macros = "0.4.1"
sqlx = { version = "0.8.2" ,features = ["postgres","runtime-tokio-rustls","chrono"]}
config = "0.14.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
rand = "0.8.5"
lazy_static = "1.5.0"
dotenv = "0.15.0"
axum-extra = { version = "0.9.4", features = ["cookie"] }
serde_json = "1.0.128"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
tower-http = {version="0.6.1", features = ["cors","trace"]}
tower-cookies = "0.10.0"
tracing-subscriber = "0.3"
tracing = "0.1.40"
